@@ -1,3 +1,11 @@
+2003-05-28  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am: get rid of $(includeopt); -Isrc/ is ok, so remove
+	lengthy explanation.
+	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)
+
+	* Makefile.in: Regenerated.
+
 2003-05-27  Derek Price  <derek@ximbiot.com>
 
 	* README: New file explaining the GNULIB origin of many of the lib
